# pocket

./: .gitignore  README.md
client/: CMakeLists.txt  build.sh  package.sh  pocket.py  pocket_api.py
client/client/: crail_directory.cc  crail_directory.h
client/cpppocket/: CMakeLists.txt  cpppocket_dispatcher.cc  cpppocket_dispatcher.h
client/pocket/: CMakeLists.txt  pocket_dispatcher.cc  pocket_dispatcher.h  pypocket.cxx
client/tests/: CMakeLists.txt  put_del.cc
controller/: .gitignore  README.md  controller.py  copy_lib.sh  stats.py
deploy/: .gitignore  README.md  clean_and_deploy.py  create_datanode_job.py  create_pocket_vpc.sh  delete_secret.sh  deploy_pocket_namenode.py  deploy_pocket_stat.py  get_secret.sh  patch_cluster.py  pocket-datanode-dram-job.yaml  pocket-namenode-deployment.yaml  pocket-stat-daemonset.yaml  pocket-stat-deployment.yaml  pocketcluster.template.yaml  prep_delete_cluster.py  setup_cluster.sh  start_pocket.py
deploy/pulumi/: .gitignore  gen_and_upload.sh  gen_config.sh  gen_env.sh  login_controller.sh
deploy/pulumi/create_bastion/: Pulumi.yaml  index.ts  package-lock.json  package.json
microbenchmark/: .gitignore  README.md  copy_lib.sh  create_lambda.sh  latency.py  update_lambda.sh
pocket-core/: pom.xml
pocket-core/assembly/: pom.xml
pocket-core/reflex-client/: pom.xml
prepare_experiment/: .gitignore  dir_configs.json  get_cpu_log.py  get_node_ip.py  prepare_video_pipeline.py  show_dir.py
prepare_experiment/configs/: dir_configs.json
tests/: link_lib.sh  lookup.py  put_del.py  test_dirs.py  test_put.py
(+8 files in other folders)
